--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -63,7 +63,7 @@
                                         </div>
                                         <div class="panel-description">
                                            <!-- <p>{{'PATIENTS.MENU.REGISTRATION_SUB'|translate}}</p> -->
-                                           <p>Used for individual patient statistics</p>
+                                           <p>Used for group reporting statistics</p>
                                         </div>
                                     </div>
                                 </div>
