--- a/templates/patient-report/individual-reports.html
+++ b/templates/patient-report/individual-reports.html
@@ -145,7 +145,7 @@
                         <th onclick="sortTable(1,'diagTable')">Diagnosis Description</th>
                         <th onclick="sortTable(2,'diagTable')">Diagnosis SerNum</th>
                     </tr>
-                    <tr ng-repeat="x in diagReport | orderBy:'-creationdate'">
+                    <tr ng-repeat="x in diagReport">
                         <td> {{ x.creationdate }} </td>
                         <td> {{ x.description }} </td>
                         <td> {{ x.sernum }} </td>
