--- a/templates/patient-report/group-reports.html
+++ b/templates/patient-report/group-reports.html
@@ -137,6 +137,11 @@
                             <td>{{demoPcntFrench}}% french preferred; {{demoPcntEnglish}}% english preferred;</td>
                         </tr>
                     </table>
+
+                    <div id="plot1" style="width:65vw;"></div>
+                    <div id="plot2" style="width:30vw;"></div>
+
+
                     <h3 style="text-align:left;">Full report on patient demographics, {{patientReportLength}} total patients</h3>
                     <!-- Load main table -->
                     <div class="gridStyle" ui-grid="demoGridOptions" ui-grid-resize-columns style="height:75vh; width:90vw;"></div>
